add css linux rig

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <img src="linux rig logo.PNG" height="200" width="310">
+  <div class="first">
+    <h1>Linux Rig</h1>
+    </div>
+  <div class="second">
+    <ul>
+      <li><a href="#" style="color: white">Come</a></li>
+      <li><a href="#" style="color: white">About</a></li>
+      <li><a href="#" style="color: white">The Linux Setup</a></li>
+      <li><a href="#" style="color: white">Contact</a></li>
+   </ul>
+  </div>
+  <div class="third">
+    <h2>The Linux Setup</h2>
+  </div>
+</body>
+</html>
