add css anchor color

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
   <div class="second">
     <ul>
-      <li><a href="#" style="color: white">Come</a></li>
-      <li><a href="#" style="color: white">About</a></li>
-      <li><a href="#" style="color: white">The Linux Setup</a></li>
-      <li><a href="#" style="color: white">Contact</a></li>
+      <li><a href="#"><span>Home</span></a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">The Linux Setup</a></li>
+      <li><a href="#">Contact</a></li>
    </ul>
   </div>
   <div class="third">
